--- a/README
+++ b/README
@@ -1,3 +1,7 @@
-- Configure o IP do seu computador para 192.168.25.2 e inicie o programa
-- Aguarde ate que a pagina de login do modem seja exibida e faca o login
-- Clique no botao iniciar desbloqueio
+1. Configure o IP do seu computador para 192.168.25.2 e inicie o programa
+2. Aguarde ate que a pagina de login do modem seja exibida e faca o login
+3. Clique no botao iniciar desbloqueio e siga as instrucoes
+
+- fgrep <cesar dot fazan at gmail.com>
+
+
