Processo de login automatizado Adicionado opcao para bloqueio do modem Adicionado opcao para habilitar SSH

--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 
+
 1. Configure o IP do seu computador para 192.168.25.200 e inicie o programa
-2. Aguarde ate que a pagina de login do modem seja exibida e faca o login
-3. Clique no botao iniciar desbloqueio e siga as instrucoes
+2. Aguarde ate que o logo da GVT seja exibido e clique na opcao desejada.
+
+O desbloqueio podera afetar o servico de TV.
 
 
 - fgrep <cesar dot fazan at gmail.com>
