--- a/README
+++ b/README
@@ -1,11 +1,10 @@
 
 
 1. Configure o IP do seu computador para 192.168.25.200 e inicie o programa
-2. Aguarde ate que o logo da GVT seja exibido e clique na opcao desejada.
+2. Clique em "Efetuar login no modem" e depois em "Desbloqueio Local ou remoto"
 
 O desbloqueio podera afetar o servico de TV.
 
 
-- fgrep <cesar dot fazan at gmail.com>
 
 
